Bug #22738 Events: After stop and start disabled events could reside in the queue
Submitted: 27 Sep 2006 14:12 Modified: 3 Mar 2008 20:38
Reporter: Andrey Hristov Email Updates:
Status: Closed
Category:Server: SP Severity:S2 (Serious)
Version:5.1.12-bk OS:Any (All)
Assigned to: Andrey Hristov Target Version:5.1+
Triage: D2 (Serious)

[27 Sep 2006 14:12] Andrey Hristov
Description:
See the topic

How to repeat:
The problem sometimes manifests itself in the test suite.
The problem is in Event_queue::recalculate_activation_times() which does not inspect the
result of Event_queue_element::compute_next_execution_time()
[12 Feb 2008 10:33] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/42096

ChangeSet@1.2546, 2008-02-12 12:33:06+02:00, andrey@whirlpool.hristov.com +1 -0
  Fix for bug#22738 Events: After stop and start disabled events could reside in the
queue
  
  Disabled events weren't removed from the memory queue after the scheduler has been
  re-enabled. After recalculation of next execution time of an event, it might get
disabled.
[22 Feb 2008 14:51] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/42837

ChangeSet@1.2546, 2008-02-22 15:51:38+01:00, andrey@whirlpool.hristov.com +2 -0
  Fix for bug#22738 Events: After stop and start disabled events could reside in the
queue
  
  Disabled events weren't removed from the memory queue after the scheduler has been
  re-enabled. After recalculation of next execution time of an event, it might get
disabled.
[22 Feb 2008 15:09] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/42841

ChangeSet@1.2546, 2008-02-22 16:09:17+01:00, andrey@whirlpool.hristov.com +2 -0
  Fix for bug#22738 Events: After stop and start disabled events could reside in the
queue
  
  Disabled events weren't removed from the memory queue after the scheduler has been
  re-enabled. After recalculation of next execution time of an event, it might get
disabled.
[22 Feb 2008 15:18] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/42842

ChangeSet@1.2546, 2008-02-22 16:18:31+01:00, andrey@whirlpool.hristov.com +2 -0
  Fix for bug#22738 Events: After stop and start disabled events could reside in the
queue
  
  Disabled events weren't removed from the memory queue after the scheduler has been
  re-enabled. After recalculation of next execution time of an event, it might get
disabled.
[3 Mar 2008 18:18] Bugs System
Pushed into 5.1.24-rc
[3 Mar 2008 18:18] Bugs System
Pushed into 6.0.5-alpha
[3 Mar 2008 20:38] Paul DuBois
Noted in 5.1.24, 6.0.5 changelogs.

After stopping and starting the event scheduler, disabled events
could remain in the execution queue.
[30 Mar 2008 0:00] Jon Stephens
Fix also documented in 5.1.23-ndb-6.3.11 changelog.