Fix for bug#22738 Events: After stop and start disabled events could reside in the queue

Disabled events weren't removed from the memory queue after the scheduler has been
re-enabled. After recalculation of next execution time of an event, it might get disabled.